--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "dependencies": {
     "gsap": "^1.20.4",
+    "noisejs": "^2.1.0",
     "randomcolor": "^0.5.3",
-    "three": "^0.90.0"
+    "three": "^0.90.0",
+    "three.meshline": "^1.0.3"
   }
 }
